# AI-Powered-Document-Intelligence-System

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  usage.py
app/: api.py  database.py  llm.py  main.py  ocr.py  schemas.py
tests/: test.py
